--- a/.github/workflows/canister_test_suite_on_any_push.yml
+++ b/.github/workflows/canister_test_suite_on_any_push.yml
@@ -23,7 +23,7 @@ jobs: # Define the jobs to be run in this workflow
       - name: Install Nix
         run: |
           sh <(curl -L https://nixos.org/nix/install) --no-daemon
-          . /etc/profile.d/nix.sh  # Source Nix profile to set environment variables
+          . /home/runner/.nix-profile/etc/profile.d/nix.sh  # Correct path for single-user installation
 
       - name: Cache Nix Packages
         uses: rikhuijzer/cache-install@v1.1.4
